fixed the light and dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,15 +11,15 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: var(--color-almond);
+    --foreground: var(--color-coffeBean);
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  box-sizing: border-box;
+  box-sizing: border-box
 }
 html {
   scroll-behavior: smooth;
